# Synonik

./: .prettierignore  LICENSE  NOTICE  README.md  Synonik.code-workspace  biome.json  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  todo.txt  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
scripts/: release.mjs
src/: App.tsx  App.vue  main.ts  main.tsx  open-props.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: accent.rs  autostart.rs  db.rs  lib.rs  main.rs  shortcut.rs  store.rs  tray.rs  window.rs
src-tauri/src/db/: manager.rs  mod.rs  models.rs  schema.rs
src/backend/: ShortcutManager.tsx  TitleBar.tsx  TrayIcon.tsx
src/components/: AboutPanel.tsx  AboutPanel.vue  ErrorContainer.tsx  ErrorMessage.tsx  ErrorMessage.vue  HelpContainer.tsx  HelpPanel.tsx  SearchContainer.tsx  SearchContainer.vue  SettingsPanel.tsx  SettingsPanel.vue  ShortcutConfig.tsx  SynonymsContainer.tsx  SynonymsList.tsx  SynonymsList.vue  Titlebar.tsx  Titlebar.vue
src/composables/: useSearch.ts  useShortcuts.ts  useTheme.ts
src/css/: about-panel.css  app.css  base.css  btn.css  error-container.css  error-message.css  help-panel.css  search-container.css  settings-panel.css  shortcut-config.css  synonyms-container.css  synonyms-list.css  theme.css  titlebar.css
src/hooks/: useSearch.ts  useShortcuts.ts  useTheme.ts
src/lib/: groupSynonyms.ts
src/types/: ResponseTypes.ts  ResponseTypes.tsx  types.tsx
